# hft_monorepo

./: .gitignore  CLAUDE.md  README.md  check.md  codex_prompt_e2e_heartbeat_tests.md  flipster_kattpish
feed/data_publisher/: .env.example  Cargo.toml  README.md
feed/data_publisher/docs/: 00_overview.md  01_authentication.md  05_market_api.md  07_public_api.md  08_affiliate_api.md
feed/data_publisher/run/: hyperliquid_publisher.pid  hyperliquid_ui.pid
feed/data_publisher/scripts/: publishers.sh
feed/data_publisher/src/: config.rs  error.rs  ilp.rs  lib.rs  main.rs  publisher.rs  store.rs  time_sync.rs
feed/data_subscriber/: .env.example  Cargo.toml  README.md
feed/data_subscriber/src/: ipc_server.rs  main.rs  protocol.rs
feed/questdb_uploader/: Cargo.toml  README.md
feed/questdb_uploader/src/: main.rs  protocol.rs
flipster_kattpish/: .env.spread_revert.example  .gitignore  CLAUDE.md  Cargo.toml  SPREAD_REVERT.md  log4rs.yaml
flipster_kattpish/backtest/: analyze_latency.py  grid_search.py  qdb.py  requirements.txt
flipster_kattpish/collector/: Cargo.toml
flipster_kattpish/collector/src/: baseline_loader.rs  baseline_writer.rs  bingx_lead.rs  coordinator.rs  fill_subscriber.rs  flipster_ipc_reader.rs  gate_lead.rs  hl_baseline_writer.rs  hl_lead.rs  hl_spread_revert.rs  ilp.rs  latency.rs  lib.rs  live_stats.rs  market_watcher.rs  mexc_lead.rs  model.rs  questdb_reader.rs  reconnect.rs  signal_publisher.rs  spread_revert.rs  strategies.rs  zmq_reader.rs
flipster_kattpish/data/: group_instances.json  nrt_state.json  symbol_groups.json  vultr_proxies.json  whitelist_full_bases.txt  whitelist_full_flipster_symbols.txt  whitelist_mm30_full.csv  whitelist_mm30_full.json  whitelist_top30.txt
flipster_kattpish/executor/: Cargo.toml
flipster_kattpish/executor/python/: lighter_executor.py
flipster_kattpish/executor/src/: bingx_helpers.rs  bingx_official.rs  config.rs  cookies.rs  executor.rs  fill_publisher.rs  flipster_account.rs  flipster_contracts.rs  flipster_helpers.rs  flipster_ws.rs  gate_contracts.rs  gate_helpers.rs  main.rs  questdb.rs  symbol_stats.rs  trade_log.rs  zmq_sub.rs
flipster_kattpish/flipster-client/: Cargo.toml  README.md
flipster_kattpish/flipster-client/src/: client.rs  error.rs  lib.rs  order.rs
flipster_kattpish/flipster-client/tests/: dry_run.rs
flipster_kattpish/flipster_rust/: Cargo.toml  build.rs
flipster_kattpish/flipster_rust/configs/: flipster_trade_settings.json
flipster_kattpish/flipster_rust/schemas/: order_processor.proto
flipster_kattpish/flipster_rust/src/: account_manager.rs  config.rs  data_cache.rs  data_client.rs  data_source_common.rs  decide_order_v8.rs  flipster_contracts.rs  flipster_cookie_store.rs  flipster_cookies.rs  flipster_private_ws.rs  flipster_runtime.rs  flipster_ws_client.rs  gate_order_manager.rs  handle_chance.rs  ipc_client.rs  lib.rs  log.rs  market_watcher.rs  metrics.rs  order_decision.rs  order_manager_client.rs  order_processor_grpc.rs  risk_manager.rs  runner.rs  runner_close.rs  runner_monitoring.rs  runner_ws.rs  signal_calculator.rs  state_manager.rs  strategy.rs  strategy_close.rs  strategy_core.rs  strategy_monitoring.rs  strategy_utils.rs  strategy_ws.rs  types.rs  zmq_sub_client.rs
flipster_kattpish/flipster_rust/src.py_port.bak/: cookies.rs  data_cache.rs  data_client.rs  entry.rs  exec_log.rs  exit.rs  lib.rs  order_manager.rs  params.rs  position.rs  position_state.rs  private_ws.rs  runner.rs  signal.rs  strategy.rs  strategy_core.rs  symbols.rs  types.rs
flipster_kattpish/grafana/: dashboard.json
flipster_kattpish/hl_pairs/: Cargo.toml
flipster_kattpish/hl_quoter/: Cargo.toml
flipster_kattpish/metrics/: metrics_flipster.json
flipster_kattpish/pairs_core/: Cargo.toml
flipster_kattpish/scripts/: _analyze_gate_book.py  _check_positions.py  _launch_remote.sh  analyze_execution.py  analyze_filter_efficacy.py  analyze_realized_fills.py  analyze_trades.py  auto_blacklist.sh  backtest_anchor_sweep.sh  backtest_bingx_sweep.sh  backtest_filters.py  backtest_gl_sweep.sh  backtest_mexc_sweep.sh  balance_tracker.py  bingx_sr_signal.py  cf_worker.js  close_all_orphans.py  compare_config_change.py  control.sh  dashboard_pnl.py  dashboard_web.py  debug_dashboard.py  deep_analysis.py  depth_collector.py  discover_filters.py  distribute_groups.py  dump_cookies.py  fetch_fill_history.py  flipster_latency_pick.py  ip_swap_watchdog.sh  leadlag_api_fill.py  leadlag_bot.py  leadlag_bot_browser.py  leadlag_crossbook.py  leadlag_persistence.py  leadlag_probe.py  leadlag_stale_limit.py  leadlag_v2.py  lighter_setup.md  lighter_stock_basis.py  (+33 more)
flipster_kattpish/sql/: 001_schema.sql  monitoring_queries.sql
flipster_web/rust/: Cargo.toml
fx_feed/: .env.example  CLAUDE.md  README.md  config.example.toml  config.toml  pyproject.toml
fx_feed/scripts/: inspect.sql
gate_hft_flipster_hedging/: .env.example  .gitignore  CLAUDE.md  config.example.toml  pyproject.toml
gate_web/rust/: Cargo.toml
market_state_updater/: .env.example  CLAUDE.md  README.md  config.json  pyproject.toml
market_state_updater/tests/: test_build_schedules.py  test_cadence.py  test_common.py  test_config.py  test_corr.py  test_integration.py  test_market_dangerous.py  test_mid_corr.py  test_notifier.py  test_parsers.py  test_query_builders.py  test_questdb_url.py  test_redis_failover.py  test_return_autocorr.py  test_sample_intervals.py  test_scheduler.py  test_variance_ratio.py  test_windows_mode.py
mono/: CODEBASE_WIKI.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Makefile  README.md
mono/.cargo/: config.toml
mono/deploy/: README.md
strategy_flipster_python/: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml  run_flipster_eth_live.sh
strategy_flipster_python/scripts/: backtest.py  bench_market_ticker.py  probe_symbols.py  test_binance_feed.py  test_contract_endpoint.py  test_execution.py  test_flipster_feed.py  test_flipster_zmq_feed.py  test_integration.py  test_resilience.py  test_snapshot_history.py  test_stats_poller.py  test_user_data.py  warmup_basis.py  warmup_multi.py
(+443 files in other folders)
