[workspace]
resolver = "2"
members = ["collector", "flipster-client"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
url = "2"
rand = "0.8"
questdb-rs = { version = "4", features = ["chrono_timestamp"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
http = "1"
zmq = "0.10"
