[project]
name = "hedger"
version = "0.1.0"
description = "Gate subaccount aggregate hedger on Flipster"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13",
    "httpx>=0.27",
    "gate-api>=6",
    "questdb>=2",
    "python-dotenv>=1",
    "structlog>=24",
    "tomli>=2; python_version < '3.11'",
    "uvloop>=0.21; sys_platform != 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hedger"]
