[package]
name = "data_subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
zmq = "0.10"
byteorder = "1.5"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
