[package]
name = "collector"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
url.workspace = true
rand.workspace = true
questdb-rs.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
http.workspace = true
urlencoding = "2"
zmq.workspace = true
dashmap.workspace = true
pairs_core = { path = "../pairs_core" }

[[bin]]
name = "collector"
path = "src/bin/main.rs"

[[bin]]
name = "funding_poller"
path = "src/bin/funding_poller.rs"

[[bin]]
name = "live_dashboard"
path = "src/bin/live_dashboard.rs"
