[package]
name = "executor"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
zmq = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Sibling crates outside this workspace.
flipster-client = { path = "../../flipster_web/rust" }
gate-client = { path = "../../gate_web/rust" }
pairs_core = { path = "../pairs_core" }

# Async HTTP for QuestDB queries.
reqwest = { workspace = true }
urlencoding = "2"
# HTTP CONNECT tunnel for routing the private WS through the same proxy
# pool as REST. Without this the WS connects directly from the host's IP
# and trips Cloudflare 1015 even when REST goes through proxies.
async-http-proxy = { version = "1.2", features = ["runtime-tokio", "basic-auth"] }

[[bin]]
name = "executor"
path = "src/main.rs"

[[bin]]
name = "bingx_test"
path = "src/bin/bingx_test.rs"

[[bin]]
name = "bingx_executor"
path = "src/bin/bingx_executor.rs"
