[package]
name = "flipster-client"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "rustls-tls", "http2"], default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
