[package]
name = "hl_pairs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pairs_core = { path = "../pairs_core" }

tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
questdb-rs.workspace = true
dotenvy = "0.15"
urlencoding = "2"
hyperliquid_rust_sdk = "0.6"
ethers = { version = "2", features = ["rustls"], default-features = false }
parking_lot = "0.12"
