[package]
name = "flipster-client"
edition = "2021"
version = "0.1.0"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "rustls-tls", "http2"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
