[package]
name = "gate-client"
edition = "2021"
version = "0.1.0"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "native-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
