[package]
name = "hft-account"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "hft_account"
path = "src/lib.rs"

[dependencies]
hft-exchange-rest = { workspace = true }
hft-exchange-gate = { workspace = true }
hft-exchange-api = { workspace = true }
hft-telemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
