[package]
name = "hft-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

hft-types = { workspace = true }

# dev-deps 는 필요 없음 — 테스트는 std::env::temp_dir + 문자열 리터럴만 사용.
