[package]
name = "hft-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hft-types = { workspace = true }
hft-exchange-api = { workspace = true }
hft-shm = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.8"
