[package]
name = "hft-exchange-binance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# hft-exchange-binance — Binance Futures (USDT-M) feed.
#
# - typed borrow-based Deserialize (DOM `Value` 제거) 로 hot-path alloc 제거.
# - `hft-exchange-common::SymbolCache` 로 Arc<str> intern.
# - `JsonScratch` 로 reusable byte buffer 를 in-place parsing 에 재사용.
# ─────────────────────────────────────────────────────────────────────────────

[dependencies]
hft-exchange-api = { workspace = true }
hft-exchange-common = { workspace = true }
# Phase 2 executor: 공통 REST/서명 helper.
hft-exchange-rest = { workspace = true }
hft-types = { workspace = true }
hft-time = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
# raw_value: subscribe ack / combined stream wrapper 의 sub-slice 를 지연 파싱.
serde_json = { workspace = true, features = ["raw_value"] }
reqwest = { workspace = true }
url = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }
