[package]
name = "hft-exchange-bybit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# hft-exchange-bybit — Bybit Linear Futures (v5) feed.
#
# - typed borrow-based Deserialize (DOM `Value` 제거) 로 hot-path alloc 제거.
# - `hft-exchange-common::SymbolCache` 로 Arc<str> intern.
# - `JsonScratch` 는 text frame 재사용; gzip/zlib binary 는 별도 `Vec<u8>`.
# ─────────────────────────────────────────────────────────────────────────────

[dependencies]
hft-exchange-api = { workspace = true }
hft-exchange-common = { workspace = true }
# Phase 2 executor: 공통 REST/서명 helper.
hft-exchange-rest = { workspace = true }
hft-types = { workspace = true }
hft-time = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
# raw_value: `data` / `arg` 의 다형 schema 를 지연 파싱하기 위함.
serde_json = { workspace = true, features = ["raw_value"] }
reqwest = { workspace = true }
url = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
